--- a/01.Rmd
+++ b/01.Rmd
@@ -21,7 +21,7 @@ Users have increased their ability to achieve their goals through data driven SM
 
 ***
 ## Notes for Tom: Feasibility, Key Points and Data required:
-References Test: [@saxenian1994]
+
 Assessments: List possible personality assessments here. 
 * Potential issue- Responses to personality tests often change even for one individual.  ex: Meyer’s Briggs personality tests have a high variability- find the source). Do we need to find a personality assesment with low variability.
 
@@ -35,3 +35,5 @@ Data Requirements:
 * Personality Assessments- Go find more. 
 * Data regarding completion / incompletion- potential biases in data were humans do not want admit they failed a goal. 
 * NLP on advice threads- Users then need to interact with this advice in order  
+References Test:
+[@saxenian1994]
