--- a/references.bib
+++ b/references.bib
@@ -82,4 +82,18 @@
   year = {2009},
 }
 
+@book{saxenian_regional_1996,
+	address = {Cambridge, Mass.},
+	edition = {50525th edition},
+	title = {Regional {Advantage}: {Culture} and {Competition} in {Silicon} {Valley} and {Route} 128},
+	isbn = {978-0-674-75340-2},
+	shorttitle = {Regional {Advantage}},
+	abstract = {Why is it that business in California's Silicon Valley flourished while along Route 128 in Massachusetts declined in the 90s? The answer, Saxenian suggests, has to do with the fact that despite similar histories and technologies, Silicon Valley developed a decentralized but cooperative industrial system while Route 128 came to be dominated by independent, self-sufficient corporations. The result of more than one hundred interviews, this compelling analysis highlights the importance of local sources of competitive advantage in a volatile world economy.},
+	language = {English},
+	publisher = {Harvard University Press},
+	author = {Saxenian, AnnaLee},
+	month = mar,
+	year = {1996}
+}
+
 
