--- a/01.Rmd
+++ b/01.Rmd
@@ -37,3 +37,5 @@ Data Requirements:
 * NLP on advice threads- Users then need to interact with this advice in order  
 References Test:
 [@saxenian1994]
+
+[@saxenian_regional_1996]
