--- a/01.Rmd
+++ b/01.Rmd
@@ -2,22 +2,21 @@
 
 #### Keywords {-}
 
-Self-Efficacy, Grit, Alfred Bandura, Angela Duckworth. Decision Support System.
+Self-Efficacy, Alfred Bandura, Grit, Angela Duckworth, Decision Support System.
 
 ## Goal achievement adjusted for personality differences.  
 
-Have you ever posted to a message thread searching for advice on a goal? Dozens of strangers respond with their best ideas. The user is frantically searching for the best thread of advice, an unfortunate subject of an opaque experiment on the Wisdom of the Crowd. There’s no logic, no validation, just the best advice from the most eloquent randomly-assigned stranger. What if that stranger provides advice that doesn’t quite match your personality or motivations? (I.E. The body builder advising an amateur). My application gives a personality test, checks your motivations and goals. Then quantifies the likelihood of success between the today you, and a customized best course of SMART based action items to enable the user to accomplish the goal. Need someone to keep you committed? We can pair you with similar users aiming for the same goal and organize local meet-ups for you to interact.
+Have you ever posted to a message thread searching for advice on a goal? Dozens of strangers respond with their best ideas. The user is frantically searching for the best thread of advice, an unfortunate subject of an opaque experiment on the wisdom of the crowd. Outside of a random draw of a stranger's opinions, there's no validation, just the best advice from the most eloquent randomly-assigned stranger. What if that stranger provides advice that doesn’t quite match your personality or motivations? (I.E. the expert advising the amateur or the amateur advising journeyman). Differences in skillsets, personality, motivation, experience all play important factors in determining the sucessful outcome of the completion of a goal. This application provides a personality test, checks your motivations and goals. Then quantifies the likelihood of success between the today you, and a customized best course of SMART based action items to enable the user to accomplish the goal. Need someone to keep you committed? We can pair you with similar users aiming for the same goal and organize local meet-ups for you to interact.
 
 ## An App to Map Goals to success and to failure.
 
-The user supplies a personality assessment and chooses from a range of predefined goals along with the ability to define their own goals. Based on the results of the personality tests and previous users personality tests to that goal, use NLP on advice threads and prior users to determine the recommendation steps which best predicted the desired outcome. As an interface, the app creates a visualization of a decision tree with interactable probability touch points on the tree to see how completing or not completing their SMART goal steps influence their ultimate probability of success. 
+The user supplies a personality assessment and chooses from a range of predefined goals along with the ability to define their own goals. Based on the results of the personality test, previous users accomplishing this goal and the use of Natural Language Processing (NLP) on advice threads all of these componetns are weighted to determine the recommendation steps of the best predicted outcome. As an interface, the app creates a visualization of a decision tree with interactable probability touch points on the tree to see how completing or not completing each SMART goal influences the ultimate probability of success. 
 
-Beyond setting and tracking the original goal, the app prompts follow ups, and issues notifications to encourage the user to make smaller steps to enabling GRIT principles as defined by Angela Duckworth or Self-Efficacy improvement as defined by Alfred Bandura. These are prescriptive analytics customized to the specific user and are designed to increase resilience and endurance when aiming toward long term goals by issuing small lifestyle prompts. 
-
+Beyond setting and tracking the original goal, the app prompts follow ups, and issues notifications to encourage the user to make smaller steps to enabling GRIT principles as defined by Angela Duckworth or Self-Efficacy improvement as defined by Alfred Bandura. These are prescriptive analytics customized to the specific user and are designed to increase resilience and endurance when aiming toward long term goals by issuing small lifestyle suggestions. 
 
 ## Users Improve their ability for goal setting and self achievement. 
 
-Users have increased their ability to achieve their goals through data driven SMART goals. Our team used predictive analytics to determine most likely advice given a user’s personality to complete a given goal. Accounting for this a system created new recommendations to accomplish the goal. Along the way, we used prescriptive analytics to nudge the user into developing more GRIT / Self-Efficacy, which is overall a strong predictor of goal completion, ultimately enabling the user to accomplish the tasks they set forward to do.     
+Users have increased their ability to achieve their goals through data driven SMART goals. Our team used predictive analytics to determine most likely advice given a user’s personality to complete a given goal. Accounting for this system created new recommendations to accomplish the goal. Along the way, we used prescriptive analytics to nudge the user into developing more GRIT / Self-Efficacy, which is overall a strong predictor of goal completion, ultimately enabling the user to accomplish the tasks they set forward to do.     
 
 ***
 ## Notes for Tom: Feasibility, Key Points and Data required:
