--- a/01.Rmd
+++ b/01.Rmd
@@ -6,9 +6,25 @@ Self-Efficacy, Alfred Bandura, Grit, Angela Duckworth, Decision Support System.
 
 ## Goal achievement adjusted for personality differences.  
 
-Have you ever posted to a message thread searching for advice on a goal? Dozens of strangers respond with their best ideas. The user is frantically searching for the best thread of advice, an unfortunate subject of an opaque experiment on the wisdom of the crowd. Outside of a random draw of a stranger's opinions, there's no validation, just the best advice from the most eloquent randomly-assigned stranger. What if that stranger provides advice that doesn’t quite match your personality or motivations? (I.E. the expert advising the amateur or the amateur advising journeyman). Differences in skillsets, personality, motivation, experience all play important factors in determining the sucessful outcome of the completion of a goal. This application provides a personality test, checks your motivations and goals. Then quantifies the likelihood of success between the today you, and a customized best course of SMART based action items to enable the user to accomplish the goal. Need someone to keep you committed? We can pair you with similar users aiming for the same goal and organize local meet-ups for you to interact.
+Have you ever posted to a message thread searching for advice on a goal? Dozens of strangers respond with their best ideas. The user frantically searching for the best thread of advice, an unfortunate subject of an opaque experiment on the wisdom of the crowd. Everything hinges on a stranger's rough opinions, there's no validation, just the best advice from the most eloquent randomly-assigneded stranger. Advice threads like Reddit or StackOverflow offer a forum for community validation, the best responses are upvoted and the worst comments are down-voted by the community. There's a challenge with this model, advice can help define the path to achievement of a goal, but it doesn't help a user stay the course, maintain engaged or follow up on their progress. 
 
-## An App to Map Goals to success and to failure.
+The big question this project seeks to tackle is to what measureable effect does personality or quality of adivce have in determining the completion of a goal. Using this as a base measurement, can the likelihood of success improve when a user is given NLP derived S.M.A.R.T. (Specific, Measureable, Achieveable, Relevant and Time Limited) styled goals and action items? Thirdly, to improve user engagement, can the application of Self-Efficacy, Grit and perseverance concepts written by researchers such as Angela Duckworth and Alfred Bandura enable a user to accomplish the goal and stay engaged relative to no advice at all. 
+
+## Mapping Goals from success to failure.
+
+To limit the initial scope of study, to be qualified as a goal, it must be acquisition of a skill that can be tracked in a measureable outcome. For example, the fundamentals of a programming langauge, the freqency and duration of regular exercise are both measurable and quantifiable, via statistics measured, knowledge checks and, tests completed. 
+
+There are three key priorities to stand-up the project:
+1) NLP on existing advice repositories: 
+Comments need to be to be qualified, and weighted by upvotes so the best responses are the most likely to be referred to a user. Once this is created, users need this content to be sourced to them for a given goal. If the scope is limited to the acquisition of a programming skill. This provides baseline statistics via a longintudinal aptitude study. 
+
+2) Completion of personality, Grit and Self-Efficacy tests:
+
+3) Implementaion of S.M.A.R.T and Grit Goals:
+
+
+
+
 
 The user supplies a personality assessment and chooses from a range of predefined goals along with the ability to define their own goals. Based on the results of the personality test, previous users accomplishing this goal and the use of Natural Language Processing (NLP) on advice threads all of these componetns are weighted to determine the recommendation steps of the best predicted outcome. As an interface, the app creates a visualization of a decision tree with interactable probability touch points on the tree to see how completing or not completing each SMART goal influences the ultimate probability of success. 
 
